tests/golden/compile-pass/control_if_expr_temp.rua
fn absolute(value: i64) -> i64 {
    let result = if value < 0 { -value } else { value };
    result
}
