tests/golden/compile-fail/pattern_unknown_struct_field.rua
enum Message { Move { x: i64, y: i64 } }

fn coordinate(message: Message) -> i64 {
    match message {
        Message::Move { z } => z,
    }
}
